[package]
name = "sssp-algos-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bench]]
name = "sssp_comparison"
harness = false

[lib]
name = "sssp_algos"
path = "src/lib.rs"

[[bin]]
name = "benchmark"
path = "src/bin/benchmark.rs"

[[bin]]
name = "demo"
path = "src/bin/demo.rs"
